implement tree chart multiple span

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -9,7 +9,7 @@ body {
   font-size: $font-size-base;
   line-height: $line-height-base;
   color: $gray-2;
-  background-color: $white;
+  background-color: transparent;
   margin: 0;
 }
 
