added new color

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,13 +7,13 @@ $dark-3: #262626;
 $dark-4: #383838;
 $dark-5: #464646;
 $gray-1: #565756;
-$gray-2: #686868;
+$gray-2: #dcdfe5;
 $gray-3: #7a7b7b;
 $gray-4: #898989;
 $gray-5: #9f9f9f;
 $gray-6: #ababab;
 $gray-7: #bcbdbc;
-$gray-8: #c8cac8;
+$gray-8: #1b232b;
 $gray-9: #d8d9d8;
 $gray-10: #eeeeee;
 $gray-11: #f8f9f8;
