implement critical path with design variables

--- a/src/scss/components/_timeline-span.scss
+++ b/src/scss/components/_timeline-span.scss
@@ -67,6 +67,11 @@
     }
     &--server {
     }
+
+    &.critical {
+        height: 2px;
+        z-index: 9999;
+    }
 }
 
 .timeline-span__duration {
