--- a/src/scss/components/_timeline-span.scss
+++ b/src/scss/components/_timeline-span.scss
@@ -1,123 +1,131 @@
 .timeline-span {
-  width: 100%;
-  height: 25px;
-  position: relative;
-  display: flex;
-  cursor: pointer;
-  background: $white;
+    width: 100%;
+    height: 25px;
+    position: relative;
+    display: flex;
+    cursor: pointer;
+    background: $white;
 
-  &:hover {
-    background: $gray-10;
-  }
+    &:hover {
+        background: $gray-8;
+    }
 }
 
 .selected-span {
-  background: $gray-10;
+    background: $gray-10;
 }
 
 .insignificant-span {
-  opacity: 0.3;
+    opacity: 0.3;
 }
 
 .erroneous-span {
-  background: rgba(255, 0, 0, 0.2);
+    // background: rgba(255, 0, 0, 0.2);
+    background: transparent;
 }
 
 .timeline-span__service-name-column-wrapper {
-  border-right: 1px $gray-8 solid;
-  box-sizing: border-box;
+    border-right: 1px $gray-8 solid;
+    box-sizing: border-box;
 }
 
 .timeline-span__span-name-column-wrapper {
-  border-right: 1px $gray-7 solid;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
+    border-right: 1px $gray-8 solid;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
 }
 
 .timeline-span__span-name-column {
-  color: $gray-4;
-  font-size: 12px;
-  padding-left: 4px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+    color: $gray-4;
+    font-size: 12px;
+    padding-left: 4px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .timeline-span__bar-wrapper {
-  position: relative;
+    position: relative;
 }
 
 .timeline-span__bar-container {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  display: flex;
-  align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
 }
 
 .timeline-span__bar {
-  position: absolute;
-  border-radius: 4px;
-  height: 70%;
+    position: absolute;
+    border-radius: 4px;
+    height: 70%;
 
-  &--client {
-    background-color: $gray-9;
-  }
-  &--server {}
+    &--client {
+        background-color: $gray-9;
+    }
+    &--server {
+    }
+
+    &.line {
+        height: 2px;
+        z-index: 9999;
+    }
 }
 
 .timeline-span__duration {
-  color: $dark-4;
-  font-size: 12px;
-  position: absolute;
+    color: $gray-9;
+    font-size: 12px;
+    position: absolute;
+    z-index: 99;
 
-  &--left {
-    padding-left: 8px;
-  }
+    &--left {
+        padding-left: 8px;
+    }
 
-  &--right {
-    padding-right: 8px;
-  }
+    &--right {
+        padding-right: 8px;
+    }
 }
 
 .timeline-span__time-marker {
-  position: absolute;
-  height: 100%;
-  width: 1px;
-  background-color: $gray-7;
+    position: absolute;
+    height: 100%;
+    width: 1px;
+    background-color: $gray-8;
 }
 
 .timeline-span__service-name-column {
-  position: relative;
-  height: 100%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .timeline-span__open-toggle-button {
-  position: absolute;
-  cursor: pointer;
-  width: 18px;
+    position: absolute;
+    cursor: pointer;
+    width: 18px;
 }
 
 .timeline-span__depth-marker {
-  position: absolute;
-  margin: 0 8px;
-  width: 3px;
-  height: 80%;
-  border-radius: 1px;
+    position: absolute;
+    margin: 0 8px;
+    width: 3px;
+    height: 80%;
+    border-radius: 1px;
 }
 
 .timeline-span__service-name-wrapper {
-  position: absolute;
-  display: flex;
+    position: absolute;
+    display: flex;
 }
 
 .timeline-span__service-name {
-  font-size: 12px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+    font-size: 12px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
