--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,18 +1,18 @@
 html {
-  // Include padding and border in the element's total width and height:
-  box-sizing: border-box;
-  font-size: $font-size-root;
+    // Include padding and border in the element's total width and height:
+    box-sizing: border-box;
+    font-size: $font-size-root;
 }
 
 body {
-  font-family: $font-family-base;
-  font-size: $font-size-base;
-  line-height: $line-height-base;
-  color: $gray-2;
-  background-color: transparent;
-  margin: 0;
+    font-family: $font-family-base;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+    color: $gray-2;
+    background-color: transparent;
+    margin: 0;
 }
 
-[role="button"] {
-  cursor: pointer;
+[role='button'] {
+    cursor: pointer;
 }
