--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,7 +8,7 @@ body {
     font-family: $font-family-base;
     font-size: $font-size-base;
     line-height: $line-height-base;
-    color: $gray-2;
+    color: $black;
     background-color: transparent;
     margin: 0;
 }
