--- a/src/scss/components/_timeline-header.scss
+++ b/src/scss/components/_timeline-header.scss
@@ -1,58 +1,63 @@
 .timeline-header {
-  height: 30px;
-  position: relative;
-  background: $gray-8;
-  width: 100%;
-  overflow: hidden;
-  border-bottom: solid 1px $gray-4;
-  display: flex;
+    height: 30px;
+    position: relative;
+    background: $gray-8;
+    width: 100%;
+    overflow: hidden;
+    border-bottom: solid 1px $gray-4;
+    display: flex;
+    color: $white;
 }
 
 .timeline-header__resizable-column {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-right: 1px solid $gray-8;
-  box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-right: 1px solid $gray-8;
+    box-sizing: border-box;
 }
 
 .timeline-header__column-name {
-  font-size: 12px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  padding-left: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding-left: 5px;
 }
 
 .timeline-header__draggable-splitter {
-  font-size: 10px;
-  padding-right: 4px;
-  cursor: pointer;
+    font-size: 10px;
+    padding-right: 4px;
+    cursor: pointer;
 }
 
 .timeline-header__time-markers {
-  position: relative;
+    position: relative;
 }
 
 .timeline-header__time-marker {
-  position: absolute;
-  height: 100%;
-  width: 1px;
-  background-color: $gray-7;
+    position: absolute;
+    height: 100%;
+    width: 1px;
+    background-color: $gray-7;
 
-  &--first, &--last {
-    width: 0;
-  }
+    &--first,
+    &--last {
+        width: 0;
+    }
 }
 
 .timeline-header__time-marker-label {
-  font-size: 10px;
-  left: 2px;
-  position: absolute;
-
-  &--last {
-    left: initial;
-    right: 2px;
+    font-size: 10px;
+    left: 2px;
     position: absolute;
-  }
+    display: flex;
+    height: 100%;
+    align-items: center;
+
+    &--last {
+        left: initial;
+        right: 2px;
+        position: absolute;
+    }
 }
