TraceChart more configurable

--- a/demo/src/InvocationDisplay/InvocationTraceChart.scss
+++ b/demo/src/InvocationDisplay/InvocationTraceChart.scss
@@ -1,3 +1,7 @@
 .ttc-wrapper {
-    overflow: auto;
+  overflow: auto;
+
+  //   .erroneous-span {
+  //     background-color: aqua !important;
+  //   }
 }
