--- a/demo/src/InvocationDisplay/InvocationTraceChart.scss
+++ b/demo/src/InvocationDisplay/InvocationTraceChart.scss
@@ -1,7 +1,7 @@
 .ttc-wrapper {
   overflow: auto;
 
-  //   .erroneous-span {
-  //     background-color: aqua !important;
-  //   }
+  .erroneous-span {
+    background-color: pink !important;
+  }
 }
